# Chat

./: .env  .env.example  README.md  app.py  chat.py  domain_layer.py  pyproject.toml  run_list.py  setup_data.py
apps/api/: main.py
apps/api/routes/: catalog.py  chat.py
artifacts/domain/CPG/: tool_bindings.json
artifacts/org/PG/: tool_bindings.json
artifacts/schemas/: nl2sql_input.schema.json  reorder_planner_input.schema.json
artifacts/usecase/SKUReorder/: tool_bindings.json
cogentiq/knowledge/: __init__.py  knowledge.py  registry.py
core/registry/: file_registry.py
core/runtime/: llm_client.py  merge.py  orchestrator.py  planner.py  prompt_composer.py
core/schemas/: api_models.py  tool_plan_models.py
core/tools/: router.py
core/tools/stubs/: nl2sql.py  reorder_planner.py
data/: compatibility.json
data/domain/Banking/: artifacts.json
data/domain/CPG/: artifacts.json
data/domain/HLS/: artifacts.json
data/org/Chase/: artifacts.json
data/org/Optum/: artifacts.json
data/org/PG/: artifacts.json
data/org/UL/: artifacts.json
data/usecase/ClaimsTriage/: artifacts.json
data/usecase/FraudWatch/: artifacts.json
data/usecase/PromoEffectiveness/: artifacts.json
data/usecase/SKUReorder/: artifacts.json
files/query_results/: nl2sql_20260303165055.csv  nl2sql_20260303171411.csv
jsonschema/: __init__.py
runtime/: __init__.py  openai_client.py  orchestrator.py  schemas.py  tools.py  utils.py
tests/unit/: test_catalog_and_chat_validation.py  test_domain_layer.py  test_knowledge.py  test_merge.py  test_schema_validation.py
(+2 files in other folders)
